# pdf-report-builder

./: .gitignore  .reportprj_lock  README.md  auto_py_to_exe_config.json  main.py  pyproject.toml  settings.py
mkdocs/: mkdocs.yml
mkdocs/docs/: index.md  Проект и версии.md  Структурные элементы.md  Тома.md  Файлы.md
pdf_report_builder/: main.py
pdf_report_builder/algorithms/: bookmarks.py  collect_computed.py  enumerate_pages.py  merge.py  parse_pages_count.py  reload_files.py
pdf_report_builder/paperformats/: format.py
pdf_report_builder/project/: base_project.py  event_channel.py  project.py  settings.py  storage.py  storage_settings.py
pdf_report_builder/project/io/: base_serializer.py  json_serializer.py  saveformats.py  serializer.py
pdf_report_builder/structure/: default_project_structure.py  level.py  level_enum.py  tome.py  version.py
pdf_report_builder/structure/factory/: base_factory.py  dict_processors.py  element_factory.py  file_factory.py  project_factory.py  settings_factory.py  tome_factory.py  version_factory.py
pdf_report_builder/structure/files/: input_pdf.py  pages_subset.py  test_writer.py
pdf_report_builder/structure/project_templates/: base_project_template.py  factory.py  igdi_multipart.py
pdf_report_builder/ui/: about.py  main.py  tree.py
pdf_report_builder/utils/: app_settings.py  docs.py  file_watcher.py  lock_file.py  logger.py  parsing.py  relative.py
tests/: test_input_pdf.py  test_merge.py  test_pages_subset.py  test_serialize_stuff.py  test_structural_element_base.py  test_writer.py
tests/sample_pdf/: sample_project.json  sample_project2.json
(+37 files in other folders)
