[tool.poetry]
name = "pdf-report-builder"
version = "0.1.0"
description = ""
authors = ["karav-n <karav-n@mail.ru>"]
readme = "README.md"
packages = [{include = "pdf_report_builder"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
pypdf = "^3.5.2"
wxpython = "^4.2.0"
auto-py-to-exe = "^2.33.0"
pyperclip = "^1.8.2"
pymupdf = "^1.22.3"
reportlab = "^4.0.4"
watchdog = "^3.0.0"

[tool.poetry.scripts]
main = "pdf_report_builder.main.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
